--- a/s/embed.html
+++ b/s/embed.html
@@ -5,8 +5,8 @@
     <title>Loading...</title>
     <style>
         body {
-            background: #0d0d0d;
-            color: #a8f0a5; /* pastel green */
+            background: #800080;
+            color: #A020F0; /* pastel green */
             font-family: 'Fira Mono', 'Consolas', monospace;
             display: flex;
             flex-direction: column;
@@ -56,3 +56,4 @@
     <div class="tips">Please wait a moment.</div>
 </body>
 </html>
+
