--- a/s/embed.html
+++ b/s/embed.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background: #800080;
-            color: #A020F0; /* pastel green */
+            color: #A020F0; 
             font-family: 'Fira Mono', 'Consolas', monospace;
             display: flex;
             flex-direction: column;
@@ -56,4 +56,5 @@
     <div class="tips">Please wait a moment.</div>
 </body>
 </html>
+
 
