--- a/assets/pages/games.html
+++ b/assets/pages/games.html
@@ -134,7 +134,7 @@
 </style>
 </head>
 <body>
-<input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
+<input type="text" id="searchBar" placeholder="Search games..." oninput="filterZones()">
 
 <div id="container">Loading...</div>
 
