--- a/assets/pages/games.html
+++ b/assets/pages/games.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Dominum Games</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 <style>
   /* games are by gn-math and truffled */
   /* truffled.lol and gn-math.dev */
@@ -91,10 +91,8 @@
   display: none;
   flex-direction: column;
   z-index: 2000;
-  flex: 1;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
 }
 #fullscreenHeader {
   display: flex;
@@ -105,44 +103,46 @@
   color: #fff;
   font-family: 'Inter', sans-serif;
 }
-#fullscreenHeader h2 {
+
+/* Style for buttons with icons */
+.header-btn {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin-left: 0.5rem;
+}
+#gameTitle {
   margin: 0;
   font-size: 1.2rem;
-}
-#fullscreenHeader span {
-  font-size: 1rem;
-  margin-left: 1rem;
-}
-#closeFullscreen {
-  background: none;
-  border: 2px solid #fff;
-  color: #fff;
-  border-radius: 50%;
-  font-size: 1.5rem;
-  width: 36px;
-  height: 36px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 #zoneFullscreenFrame {
   flex: 1;
   width: 100%;
   border: none;
 }
-  </style>
+</style>
 </head>
 <body>
 <input type="text" id="searchBar" placeholder="Search games..." oninput="filterZones()">
 <div id="container">Loading...</div>
+
 <div id="fullscreenOverlay">
   <div id="fullscreenHeader">
     <h2 id="gameTitle">Game Title</h2>
-    <button id="closeFullscreen" title="Close">&times;</button>
+    <div>
+      <button id="fullscreenBtn" class="header-btn" title="Fullscreen">
+        <i class="fas fa-expand"></i>
+      </button>
+      <button id="closeFullscreen" class="header-btn" title="Close">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
   </div>
   <iframe id="zoneFullscreenFrame"></iframe>
 </div>
+
 <script>
 const container = document.getElementById('container');
 const searchBar = document.getElementById('searchBar');
@@ -150,10 +150,10 @@ const overlay = document.getElementById('fullscreenOverlay');
 const iframe = document.getElementById('zoneFullscreenFrame');
 const closeBtn = document.getElementById('closeFullscreen');
 const gameTitle = document.getElementById('gameTitle');
+const fullscreenBtn = document.getElementById('fullscreenBtn');
 
 const zonesURLs = [
   "https://cdn.jsdelivr.net/gh/gn-math/assets@main/zones.json"
-  // other URLs
 ];
 
 const coverURL = "https://cdn.jsdelivr.net/gh/gn-math/covers@main";
@@ -237,7 +237,6 @@ function displayFiltered(filteredZones) {
     item.appendChild(btn);
     container.appendChild(item);
   });
-  // Lazy load images
   const imgs = document.querySelectorAll('img[data-src]');
   const observer = new IntersectionObserver((entries, obs) => {
     entries.forEach(e => {
@@ -266,10 +265,8 @@ async function openZone(zone) {
   const isAbsolute = zoneUrl.startsWith('http');
 
   if (isAbsolute) {
-    // Load directly
     iframe.src = zoneUrl;
   } else {
-    // Fetch, create Blob URL
     const fullUrl = zoneUrl.replace('{COVER_URL}', coverURL).replace('{HTML_URL}', htmlURL);
     try {
       const response = await fetch(fullUrl);
@@ -281,14 +278,21 @@ async function openZone(zone) {
         URL.revokeObjectURL(blobUrl);
       };
     } catch (e) {
-      alert('Failed to load zone content.');
+      console.error('Blob load failed, falling back to direct URL:', e);
+      iframe.src = fullUrl;
     }
   }
 }
 
-closeBtn.onclick = () => {
+document.getElementById('closeFullscreen').onclick = () => {
   overlay.style.display = 'none';
   iframe.src = '';
+};
+
+document.getElementById('fullscreenBtn').onclick = () => {
+  iframe.requestFullscreen().catch(() => {
+    alert('Fullscreen mode is not supported or blocked.');
+  });
 };
 
 loadZones();
