--- a/assets/pages/apps.html
+++ b/assets/pages/apps.html
@@ -107,7 +107,8 @@ const apps = [
   { "title": "Instagram", "image": "https://raw.githubusercontent.com/Darkdragonzxs/dominum/refs/heads/main/assets/images/apps/instagram.png", "url": "https://instagram.com/" },
   { "title": "Disc0rd", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/discord.png", "url": "https://discord.com/" },
   { "title": "TikTok", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/tiktok.png", "url": "https://tiktok.com/" },
-  { "title": "Twitch", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/twitch.png", "url": "https://twitch.tv/" }
+  { "title": "Twitch", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/twitch.png", "url": "https://twitch.tv/" },
+  { "title": "VidSrc", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/vidsrc.png", "url": "https://vsrc.ru/" }
 ];
 
 function displayApps(list) {
