Update VidSrc URL in apps.html

--- a/assets/pages/apps.html
+++ b/assets/pages/apps.html
@@ -108,7 +108,7 @@ const apps = [
   { "title": "Disc0rd", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/discord.png", "url": "https://discord.com/" },
   { "title": "TikTok", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/tiktok.png", "url": "https://tiktok.com/" },
   { "title": "Twitch", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/twitch.png", "url": "https://twitch.tv/" },
-  { "title": "VidSrc", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/vidsrc.png", "url": "https://vsrc.ru/" }
+  { "title": "VidSrc", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/vidsrc.png", "url": "https://vidsrcme.ru/" }
 ];
 
 function displayApps(list) {
