--- a/assets/pages/apps.html
+++ b/assets/pages/apps.html
@@ -109,7 +109,8 @@ const apps = [
   { "title": "TikTok", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/tiktok.png", "url": "https://tiktok.com/" },
   { "title": "Twitch", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/twitch.png", "url": "https://twitch.tv/" },
   { "title": "VidSrc", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/vidsrc.png", "url": "https://vidsrcme.ru/" },
-  { "title": "IMDb", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/imdb.jpeg", "url": "https://www.imdb.com/" }
+  { "title": "IMDb", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/imdb.jpeg", "url": "https://www.imdb.com/" },
+  { "title": "Vortex Chat", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/vtx-chat.png", "url": "https://vtx.chat/" }
 ];
 
 function displayApps(list) {
