--- a/assets/pages/apps.html
+++ b/assets/pages/apps.html
@@ -110,7 +110,7 @@ const apps = [
   { "title": "Twitch", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/twitch.png", "url": "https://twitch.tv/" },
   { "title": "VidSrc", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/vidsrc.png", "url": "https://vidsrcme.ru/" },
   { "title": "IMDb", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/imdb.jpeg", "url": "https://www.imdb.com/" },
-  { "title": "Vortex Chat", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/vtx-chat.png", "url": "https://vtx.chat/" }
+  { "title": "Vortex Chat", "image": "https://cdn.jsdelivr.net/gh/Darkdragonzxs/dominum@main/assets/images/apps/vtx-chat.png", "url": "https://vtx.chat/embed/dominum" }
 ];
 
 function displayApps(list) {
