--- a/assets/pages/games.html
+++ b/assets/pages/games.html
@@ -5,8 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 <style>
-  /* games are by gn-math and truffled */
-  /* truffled.lol and gn-math.dev */
   :root {
     --primary: #6f42c1;
     --primary-hover: #5936a6;
@@ -195,7 +193,6 @@ function displayZones() {
     item.appendChild(btn);
     container.appendChild(item);
   });
-  // Lazy load images
   const imgs = document.querySelectorAll('img[data-src]');
   const observer = new IntersectionObserver((entries, obs) => {
     entries.forEach(e => {
@@ -296,6 +293,26 @@ document.getElementById('fullscreenBtn').onclick = () => {
 };
 
 loadZones();
+</script>
+  <script>
+  const root=document.documentElement;
+  const name=localStorage.getItem("dominim-theme")||"default";
+  const themes={
+    default:{"--bg":"#0b0a16","--accent":"#7a5cff","--blue":"#00bfff","--text":"#e6e6ff"},
+    cyber:{"--bg":"#050c1b","--accent":"#39ff14","--blue":"#00ffff","--text":"#e0ffe0"},
+    sunset:{"--bg":"#1a0b0b","--accent":"#ff6f61","--blue":"#ffa500","--text":"#fff0e6"},
+    neon:{"--bg":"#0f0020","--accent":"#ff00ff","--blue":"#00ffff","--text":"#ffffff"},
+    darkred:{"--bg":"#1b0000","--accent":"#ff0000","--blue":"#cc0000","--text":"#ffe6e6"}
+  };
+  if(name==="custom"){
+    const t=JSON.parse(localStorage.getItem("dominim-custom-theme")||"{}");
+    Object.entries(t).forEach(([v,k])=>root.style.setProperty(v,k));
+  }else Object.entries(themes[name]).forEach(([v,k])=>root.style.setProperty(v,k));
+  document.addEventListener("keydown",e=>{
+    const key=localStorage.getItem("dominim-panic-key");
+    const link=localStorage.getItem("dominim-panic-link");
+    if(key&&link&&e.key.toLowerCase()===key)window.location.href=link;
+  });
 </script>
 </body>
 </html>
