--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -9,58 +9,61 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 <style>
-  :root {
-    --bg: #0b0a16;
-    --accent: #7a5cff;
-    --blue: #00bfff;
-    --text: #e6e6ff;
-  }
-  *{box-sizing:border-box;margin:0;padding:0}
-  body{
-    background:var(--bg);
-    color:var(--text);
-    font-family:'Orbitron',sans-serif;
-    overflow:hidden;
-    height:100vh;width:100vw;
-  }
-  #particles-js{position:fixed;width:100%;height:100%;top:0;left:0;z-index:0}
-  .content{
-    position:relative;z-index:1;display:flex;flex-direction:column;
-    align-items:center;justify-content:center;height:100vh;text-align:center;padding:0 20px;
-  }
-  h1{color:var(--accent);font-size:2.5em;margin-bottom:30px}
-  .setting-box{
-    background:rgba(255,255,255,0.05);
-    border:1px solid var(--accent);
-    border-radius:20px;
-    padding:20px 30px;
-    width:90%;
-    max-width:500px;
-    margin-bottom:25px;
-  }
-  label{display:block;margin-bottom:8px;color:var(--blue)}
-  select,input[type="color"],input[type="text"],input[type="url"],button{
-    width:100%;
-    padding:10px;
-    border:none;
-    border-radius:8px;
-    background:rgba(255,255,255,0.07);
-    color:var(--text);
-    font-family:'Orbitron',sans-serif;
-    outline:none;
-  }
-  button{
-    margin-top:10px;
-    border:1px solid var(--accent);
-    background:rgba(255,255,255,0.05);
-    cursor:pointer;
-    transition:all 0.3s ease;
-  }
-  button:hover{
-    border-color:var(--blue);
-    color:var(--blue);
-    box-shadow:0 0 10px var(--blue);
-  }
+:root {
+  --bg: #0b0a16;
+  --accent: #7a5cff;
+  --blue: #00bfff;
+  --text: #e6e6ff;
+  --surface: rgba(255,255,255,0.05);
+  --border: rgba(255,255,255,0.1);
+  --card-bg: rgba(255,255,255,0.03);
+}
+*{box-sizing:border-box;margin:0;padding:0}
+body{
+  background:var(--bg);
+  color:var(--text);
+  font-family:'Orbitron',sans-serif;
+  overflow:hidden;
+  height:100vh;width:100vw;
+}
+#particles-js{position:fixed;width:100%;height:100%;top:0;left:0;z-index:0}
+.content{
+  position:relative;z-index:1;display:flex;flex-direction:column;
+  align-items:center;justify-content:center;height:100vh;text-align:center;padding:0 20px;
+}
+h1{color:var(--accent);font-size:2.5em;margin-bottom:30px}
+.setting-box{
+  background:var(--surface);
+  border:1px solid var(--accent);
+  border-radius:20px;
+  padding:20px 30px;
+  width:90%;
+  max-width:500px;
+  margin-bottom:25px;
+}
+label{display:block;margin-bottom:8px;color:var(--blue)}
+select,input[type="color"],input[type="text"],input[type="url"],button{
+  width:100%;
+  padding:10px;
+  border:none;
+  border-radius:8px;
+  background:rgba(255,255,255,0.07);
+  color:var(--text);
+  font-family:'Orbitron',sans-serif;
+  outline:none;
+}
+button{
+  margin-top:10px;
+  border:1px solid var(--accent);
+  background:rgba(255,255,255,0.05);
+  cursor:pointer;
+  transition:all 0.3s ease;
+}
+button:hover{
+  border-color:var(--blue);
+  color:var(--blue);
+  box-shadow:0 0 10px var(--blue);
+}
 </style>
 </head>
 <body>
@@ -77,6 +80,7 @@
       <option value="sunset">Sunset</option>
       <option value="neon">Neon</option>
       <option value="darkred">Dark Red</option>
+      <option value="dnv2">DNV2</option>
       <option value="custom">Custom</option>
     </select>
     <div id="custom-theme-inputs" style="display:none;margin-top:10px;">
@@ -104,88 +108,97 @@
 
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
-  particlesJS("particles-js", {
-    "particles": {"number":{"value":60},"color":{"value":["#7a5cff","#00bfff"]},
-    "shape":{"type":"circle"},"opacity":{"value":0.5},"size":{"value":2},
-    "line_linked":{"enable":true,"distance":130,"color":"#7a5cff","opacity":0.2,"width":1},
-    "move":{"enable":true,"speed":1.2,"direction":"none","out_mode":"out"}},
-    "interactivity":{"events":{"onhover":{"enable":true,"mode":"repulse"}},
-    "modes":{"repulse":{"distance":100}}},"retina_detect":true
-  });
+particlesJS("particles-js", {
+  "particles":{"number":{"value":60},"color":{"value":["#7a5cff","#00bfff"]},
+  "shape":{"type":"circle"},"opacity":{"value":0.5},"size":{"value":2},
+  "line_linked":{"enable":true,"distance":130,"color":"#7a5cff","opacity":0.2,"width":1},
+  "move":{"enable":true,"speed":1.2,"direction":"none","out_mode":"out"}},
+  "interactivity":{"events":{"onhover":{"enable":true,"mode":"repulse"}},
+  "modes":{"repulse":{"distance":100}}},"retina_detect":true
+});
 
-  const root=document.documentElement;
-  const themes={
-    default:{"--bg":"#0b0a16","--accent":"#7a5cff","--blue":"#00bfff","--text":"#e6e6ff"},
-    cyber:{"--bg":"#050c1b","--accent":"#39ff14","--blue":"#00ffff","--text":"#e0ffe0"},
-    sunset:{"--bg":"#1a0b0b","--accent":"#ff6f61","--blue":"#ffa500","--text":"#fff0e6"},
-    neon:{"--bg":"#0f0020","--accent":"#ff00ff","--blue":"#00ffff","--text":"#ffffff"},
-    darkred:{"--bg":"#1b0000","--accent":"#ff0000","--blue":"#cc0000","--text":"#ffe6e6"}
-  };
+const root=document.documentElement;
+const themes={
+  default:{"--bg":"#0b0a16","--accent":"#7a5cff","--blue":"#00bfff","--text":"#e6e6ff",
+           "--surface":"rgba(255,255,255,0.05)","--border":"rgba(255,255,255,0.1)","--card-bg":"rgba(255,255,255,0.03)"},
+  cyber:{"--bg":"#050c1b","--accent":"#39ff14","--blue":"#00ffff","--text":"#e0ffe0",
+         "--surface":"rgba(0,255,0,0.05)","--border":"rgba(0,255,0,0.1)","--card-bg":"rgba(0,255,0,0.03)"},
+  sunset:{"--bg":"#1a0b0b","--accent":"#ff6f61","--blue":"#ffa500","--text":"#fff0e6",
+          "--surface":"rgba(255,110,100,0.05)","--border":"rgba(255,110,100,0.1)","--card-bg":"rgba(255,110,100,0.03)"},
+  neon:{"--bg":"#0f0020","--accent":"#ff00ff","--blue":"#00ffff","--text":"#ffffff",
+        "--surface":"rgba(255,0,255,0.05)","--border":"rgba(255,0,255,0.1)","--card-bg":"rgba(255,0,255,0.03)"},
+  darkred:{"--bg":"#1b0000","--accent":"#ff0000","--blue":"#cc0000","--text":"#ffe6e6",
+           "--surface":"rgba(255,0,0,0.05)","--border":"rgba(255,0,0,0.1)","--card-bg":"rgba(255,0,0,0.03)"},
+  dnv2:{"--bg": "#050007","--accent": "#ff00de","--blue": "#00fff7","--text": "#ffffff",
+         "--surface": "rgba(255, 0, 255, 0.05)","--border": "rgba(255, 0, 255, 0.15)","--card-bg": "rgba(15, 0, 30, 0.7)"}
+};
 
-  function applyTheme(theme){
-    Object.entries(theme).forEach(([v,k])=>root.style.setProperty(v,k));
-    try{
-      if(window.parent&&window.parent!==window){
-        Object.entries(theme).forEach(([v,k])=>window.parent.document.documentElement.style.setProperty(v,k));
-      }
-    }catch(e){}
-  }
-
-  function saveTheme(themeName,custom){
-    localStorage.setItem("dominim-theme",themeName);
-    if(custom)localStorage.setItem("dominim-custom-theme",JSON.stringify(custom));
-  }
-
-  function loadTheme(){
-    const name=localStorage.getItem("dominim-theme")||"default";
-    if(name==="custom"){
-      const t=JSON.parse(localStorage.getItem("dominim-custom-theme")||"{}");
-      applyTheme(t);
-    }else applyTheme(themes[name]);
-    document.getElementById("theme").value=name;
-  }
-
-  document.getElementById("theme").onchange=e=>{
-    if(e.target.value==="custom"){
-      document.getElementById("custom-theme-inputs").style.display="block";
-    }else{
-      document.getElementById("custom-theme-inputs").style.display="none";
-      applyTheme(themes[e.target.value]);
-      saveTheme(e.target.value);
+function applyTheme(theme){
+  Object.entries(theme).forEach(([v,k])=>root.style.setProperty(v,k));
+  try{
+    if(window.parent && window.parent !== window){
+      Object.entries(theme).forEach(([v,k])=>window.parent.document.documentElement.style.setProperty(v,k));
     }
+  }catch(e){}
+}
+
+function saveTheme(themeName,custom){
+  localStorage.setItem("dominum-theme",themeName);
+  if(custom)localStorage.setItem("dominum-custom-theme",JSON.stringify(custom));
+}
+
+function loadTheme(){
+  const name=localStorage.getItem("dominum-theme")||"default";
+  if(name==="custom"){
+    const t=JSON.parse(localStorage.getItem("dominum-custom-theme")||"{}");
+    applyTheme(t);
+  }else applyTheme(themes[name]);
+  document.getElementById("theme").value=name;
+}
+
+document.getElementById("theme").onchange=e=>{
+  if(e.target.value==="custom"){
+    document.getElementById("custom-theme-inputs").style.display="block";
+  }else{
+    document.getElementById("custom-theme-inputs").style.display="none";
+    applyTheme(themes[e.target.value]);
+    saveTheme(e.target.value);
+    if(window.parent && window.parent.loadTheme) window.parent.loadTheme();
+  }
+};
+
+document.getElementById("saveCustom").onclick=()=>{
+  const custom={
+    "--bg":bgColor.value,"--accent":accentColor.value,"--blue":blueColor.value,"--text":textColor.value
   };
+  applyTheme(custom);
+  saveTheme("custom",custom);
+  if(window.parent && window.parent.loadTheme) window.parent.loadTheme();
+};
 
-  document.getElementById("saveCustom").onclick=()=>{
-    const custom={
-      "--bg":bgColor.value,"--accent":accentColor.value,"--blue":blueColor.value,"--text":textColor.value
-    };
-    applyTheme(custom);
-    saveTheme("custom",custom);
-  };
+document.getElementById("openAboutBlank").onclick=()=>{
+  const win=window.open("about:blank","_blank");
+  const iframe=win.document.createElement("iframe");
+  iframe.src="/index.html";
+  iframe.style="border:none;width:100%;height:100vh;";
+  win.document.body.style.margin="0";
+  win.document.body.appendChild(iframe);
+};
 
-  document.getElementById("openAboutBlank").onclick=()=>{
-    const win=window.open("about:blank","_blank");
-    const iframe=win.document.createElement("iframe");
-    iframe.src="/index.html";
-    iframe.style="border:none;width:100%;height:100vh;";
-    win.document.body.style.margin="0";
-    win.document.body.appendChild(iframe);
-  };
+document.getElementById("savePanic").onclick=()=>{
+  localStorage.setItem("dominum-panic-key",document.getElementById("panicKey").value.toLowerCase());
+  localStorage.setItem("dominum-panic-link",document.getElementById("panicLink").value);
+};
 
-  document.getElementById("savePanic").onclick=()=>{
-    localStorage.setItem("dominim-panic-key",document.getElementById("panicKey").value.toLowerCase());
-    localStorage.setItem("dominim-panic-link",document.getElementById("panicLink").value);
-  };
+document.addEventListener("keydown",e=>{
+  const key=localStorage.getItem("dominum-panic-key");
+  const link=localStorage.getItem("dominum-panic-link");
+  if(key&&link&&e.key.toLowerCase()===key){
+    window.location.href=link;
+  }
+});
 
-  document.addEventListener("keydown",e=>{
-    const key=localStorage.getItem("dominim-panic-key");
-    const link=localStorage.getItem("dominim-panic-link");
-    if(key&&link&&e.key.toLowerCase()===key){
-      window.location.href=link;
-    }
-  });
-
-  loadTheme();
+loadTheme();
 </script>
 </body>
 </html>
