--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
   }
 </script>
 <script>
+
+  function loadPage(page){
+  const frame=document.getElementById("content-frame");
+  frame.src=`assets/pages/${page}.html`;
+  frame.onload=()=>loadTheme();
+}
+  
   const root=document.documentElement;
   const root=document.documentElement;
 const themes={
@@ -127,17 +134,6 @@ function loadTheme(){
   }else applyTheme(themes[name]);
 }
 
-document.addEventListener("keydown",e=>{
-  const key=localStorage.getItem("dominum-panic-key");
-  const link=localStorage.getItem("dominum-panic-link");
-  if(key&&link&&e.key.toLowerCase()===key)window.location.href=link;
-});
-
-function loadPage(page){
-  const frame=document.getElementById("content-frame");
-  frame.src=`assets/pages/${page}.html`;
-  frame.onload=()=>loadTheme(); // re-apply theme when new page loads
-}
   if(name==="custom"){
     const t=JSON.parse(localStorage.getItem("dominum-custom-theme")||"{}");
     Object.entries(t).forEach(([v,k])=>root.style.setProperty(v,k));
