--- a/assets/pages/search.html
+++ b/assets/pages/search.html
@@ -255,5 +255,44 @@ function activateTab(tab) {
 window.addEventListener('resize', updateTabWidths);
 updateTabWidths();
 </script>
+<script>
+    const root=document.documentElement;
+  const root=document.documentElement;
+const themes={
+  default:{"--bg":"#0b0a16","--accent":"#7a5cff","--blue":"#00bfff","--text":"#e6e6ff",
+           "--surface":"rgba(255,255,255,0.05)","--border":"rgba(255,255,255,0.1)","--card-bg":"rgba(255,255,255,0.03)"},
+  cyber:{"--bg":"#050c1b","--accent":"#39ff14","--blue":"#00ffff","--text":"#e0ffe0",
+         "--surface":"rgba(0,255,0,0.05)","--border":"rgba(0,255,0,0.1)","--card-bg":"rgba(0,255,0,0.03)"},
+  sunset:{"--bg":"#1a0b0b","--accent":"#ff6f61","--blue":"#ffa500","--text":"#fff0e6",
+          "--surface":"rgba(255,110,100,0.05)","--border":"rgba(255,110,100,0.1)","--card-bg":"rgba(255,110,100,0.03)"},
+  neon:{"--bg":"#0f0020","--accent":"#ff00ff","--blue":"#00ffff","--text":"#ffffff",
+        "--surface":"rgba(255,0,255,0.05)","--border":"rgba(255,0,255,0.1)","--card-bg":"rgba(255,0,255,0.03)"},
+  darkred:{"--bg":"#1b0000","--accent":"#ff0000","--blue":"#cc0000","--text":"#ffe6e6",
+           "--surface":"rgba(255,0,0,0.05)","--border":"rgba(255,0,0,0.1)","--card-bg":"rgba(255,0,0,0.03)"},
+    dnv2:{"--bg": "#050007","--accent": "#ff00de","--blue": "#00fff7","--text": "#ffffff",
+         "--surface": "rgba(255, 0, 255, 0.05)","--border": "rgba(255, 0, 255, 0.15)","--card-bg": "rgba(15, 0, 30, 0.7)"}
+};
+
+function applyTheme(theme){
+  Object.entries(theme).forEach(([v,k])=>root.style.setProperty(v,k));
+  const frame=document.getElementById("content-frame");
+  try {
+    Object.entries(theme).forEach(([v,k])=>frame.contentWindow.document.documentElement.style.setProperty(v,k));
+  } catch(e){}
+}
+
+function loadTheme(){
+  const name=localStorage.getItem("dominum-theme")||"default";
+  if(name==="custom"){
+    const t=JSON.parse(localStorage.getItem("dominum-custom-theme")||"{}");
+    applyTheme(t);
+  }else applyTheme(themes[name]);
+}
+
+  if(name==="custom"){
+    const t=JSON.parse(localStorage.getItem("dominum-custom-theme")||"{}");
+    Object.entries(t).forEach(([v,k])=>root.style.setProperty(v,k));
+  }else Object.entries(themes[name]).forEach(([v,k])=>root.style.setProperty(v,k));
+</script>
 </body>
 </html>
