Add Extras icon to sidebar in index.html

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <i class="fa-solid fa-box-archive" title="Apps" onclick="loadPage('apps')"></i>
       <i class="fa-solid fa-magnifying-glass" title="Search" onclick="loadPage('search')"></i>
       <i class="fa-solid fa-gear" title="Settings" onclick="loadPage('settings')"></i>
+      <i class="fa-solid fa-plus" title="Extras" onclick="loadPage('extras')"></i>
     </div>
 
     <div class="sidebar-bottom">
