--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -16,48 +16,48 @@
     font-family:'Orbitron',sans-serif;display:flex;flex-direction:column;
     align-items:center;justify-content:flex-start;height:100vh;overflow-y:auto;
   }
-  h1 {
-    font-size:2.2em;margin-bottom:30px;text-transform:uppercase;color:var(--accent);
-  }
-  .extras-buttons {
-    display:flex;gap:20px;flex-wrap:wrap;justify-content:center;
-  }
+  h1 {font-size:2.2em;margin-bottom:30px;text-transform:uppercase;color:var(--accent);}
+  .extras-buttons {display:flex;gap:20px;flex-wrap:wrap;justify-content:center;}
   .extras-btn {
     background:var(--surface);border:2px solid var(--border);color:var(--text);
     padding:15px 30px;border-radius:10px;cursor:pointer;font-size:1em;
-    text-transform:uppercase;letter-spacing:1px;transition:all 0.3s ease;
+    text-transform:uppercase;letter-spacing:1px;transition:all .3s ease;
   }
-  .extras-btn:hover {
-    background:var(--accent);color:#fff;transform:translateY(-3px);
-  }
+  .extras-btn:hover {background:var(--accent);color:#fff;transform:translateY(-3px);}
   .modal {
     display:none;position:fixed;z-index:999;left:0;top:0;width:100%;height:100%;
-    background:rgba(10,10,20,0.8);backdrop-filter:blur(5px);justify-content:center;align-items:center;
+    background:rgba(10,10,20,.8);backdrop-filter:blur(5px);justify-content:center;align-items:center;
   }
-  .modal.active {display:flex;}
+  .modal.active{display:flex;}
   .modal-content {
     background:var(--card-bg);border:2px solid var(--border);border-radius:15px;
     padding:25px;width:80%;max-width:700px;max-height:80%;overflow-y:auto;
-    box-shadow:0 0 20px var(--accent);animation:fadeIn 0.3s ease;
+    box-shadow:0 0 20px var(--accent);animation:fadeIn .3s ease;
   }
   .modal-header {
     display:flex;justify-content:space-between;align-items:center;margin-bottom:15px;
   }
-  .modal-header h2 {color:var(--accent);font-size:1.5em;}
-  .close-btn {cursor:pointer;font-size:1.3em;color:var(--text);transition:color 0.3s ease;}
-  .close-btn:hover {color:var(--accent);}
+  .modal-header h2{color:var(--accent);font-size:1.5em;}
+  .close-btn{cursor:pointer;font-size:1.3em;color:var(--text);transition:color .3s ease;}
+  .close-btn:hover{color:var(--accent);}
   .card {
     background:var(--surface);border:1px solid var(--border);border-radius:10px;
     padding:15px;display:flex;align-items:flex-start;gap:15px;margin-bottom:15px;
-    transition:transform 0.2s ease,border-color 0.3s ease;
+    transition:transform .2s ease,border-color .3s ease;cursor:pointer;
   }
-  .card:hover {border-color:var(--accent);transform:translateY(-3px);}
-  .card img {width:60px;height:60px;border-radius:50%;object-fit:cover;}
-  .card-content {flex:1;}
-  .card h3 {margin:0;font-size:1.1em;color:var(--accent);}
-  .card p.role {font-size:0.9em;color:var(--blue);margin-bottom:5px;}
-  .card p.desc {font-size:0.85em;color:var(--text);opacity:0.9;}
-  @keyframes fadeIn {from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
+  .card:hover{border-color:var(--accent);transform:translateY(-3px);}
+  .card img{width:60px;height:60px;border-radius:50%;object-fit:cover;}
+  .card-content{flex:1;}
+  .card h3{margin:0;font-size:1.1em;color:var(--accent);}
+  .card p.role{font-size:.9em;color:var(--blue);margin-bottom:5px;}
+  .card p.desc{font-size:.85em;color:var(--text);opacity:.9;}
+  .link-btns{display:flex;gap:15px;margin-top:20px;justify-content:center;}
+  .link-btn{
+    background:var(--accent);border:none;color:#fff;padding:10px 20px;border-radius:8px;
+    cursor:pointer;font-family:'Orbitron',sans-serif;text-transform:uppercase;transition:background .3s;
+  }
+  .link-btn:hover{background:var(--blue);}
+  @keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
 </style>
 </head>
 <body>
@@ -66,13 +66,14 @@
   <button class="extras-btn" onclick="openModal('credits-modal')"><i class="fa-solid fa-star"></i> Credits</button>
   <button class="extras-btn" onclick="openModal('partners-modal')"><i class="fa-solid fa-handshake"></i> Partners</button>
 </div>
+
 <div class="modal" id="credits-modal">
   <div class="modal-content">
     <div class="modal-header">
       <h2>Credits</h2>
       <span class="close-btn" onclick="closeModal('credits-modal')">&times;</span>
     </div>
-    <div class="card">
+    <div class="card" onclick="openProfile('John Doe','Lead Developer','Handled core functionality, theme system, and page routing.','https://via.placeholder.com/60')">
       <img src="https://via.placeholder.com/60" alt="User">
       <div class="card-content">
         <h3>John Doe</h3>
@@ -80,7 +81,7 @@
         <p class="desc">Handled core functionality, theme system, and page routing.</p>
       </div>
     </div>
-    <div class="card">
+    <div class="card" onclick="openProfile('Jane Smith','UI/UX Designer','Designed the visual style and helped with animations and layout structure.','https://via.placeholder.com/60')">
       <img src="https://via.placeholder.com/60" alt="User">
       <div class="card-content">
         <h3>Jane Smith</h3>
@@ -90,13 +91,14 @@
     </div>
   </div>
 </div>
+
 <div class="modal" id="partners-modal">
   <div class="modal-content">
     <div class="modal-header">
       <h2>Partners</h2>
       <span class="close-btn" onclick="closeModal('partners-modal')">&times;</span>
     </div>
-    <div class="card">
+    <div class="card" onclick="handlePartnerClick('Neon Games','AuroraDev','A creative studio that provided game integrations and exclusive assets for Dominum’s projects.','https://via.placeholder.com/60','https://discord.gg/example','https://neongames.com')">
       <img src="https://via.placeholder.com/60" alt="Partner Logo">
       <div class="card-content">
         <h3>Neon Games</h3>
@@ -104,7 +106,7 @@
         <p class="desc">A creative studio that provided game integrations and exclusive assets for Dominum’s projects.</p>
       </div>
     </div>
-    <div class="card">
+    <div class="card" onclick="handlePartnerClick('CyberNode Hosting','TechX','Provided reliable hosting and backend infrastructure for Dominum’s online services.','https://via.placeholder.com/60','none','https://cybernode.io')">
       <img src="https://via.placeholder.com/60" alt="Partner Logo">
       <div class="card-content">
         <h3>CyberNode Hosting</h3>
@@ -114,10 +116,76 @@
     </div>
   </div>
 </div>
+
+<div class="modal" id="profile-modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h2 id="profile-name"></h2>
+      <span class="close-btn" onclick="closeModal('profile-modal')">&times;</span>
+    </div>
+    <div style="display:flex;gap:15px;align-items:flex-start;">
+      <img id="profile-img" src="" alt="Profile" style="width:70px;height:70px;border-radius:50%;object-fit:cover;">
+      <div>
+        <p id="profile-role" style="color:var(--blue);margin:5px 0;"></p>
+        <p id="profile-desc" style="color:var(--text);opacity:.9;font-size:.9em;"></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal" id="partner-link-modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h2 id="partner-name"></h2>
+      <span class="close-btn" onclick="closeModal('partner-link-modal')">&times;</span>
+    </div>
+    <p style="text-align:center;margin-top:10px;">Where would you like to go?</p>
+    <div class="link-btns">
+      <button id="discord-btn" class="link-btn"><i class="fa-brands fa-discord"></i> Discord</button>
+      <button id="website-btn" class="link-btn"><i class="fa-solid fa-globe"></i> Website</button>
+    </div>
+  </div>
+</div>
+
 <script>
+let currentPartner={};
 function openModal(id){document.getElementById(id).classList.add('active');}
 function closeModal(id){document.getElementById(id).classList.remove('active');}
-document.querySelectorAll('.modal').forEach(m=>{m.addEventListener('click',e=>{if(e.target===m)closeModal(m.id);});});
+document.querySelectorAll('.modal').forEach(m=>m.addEventListener('click',e=>{if(e.target===m)closeModal(m.id);}));
+
+function openProfile(name,role,desc,img){
+  document.getElementById('profile-name').innerText=name;
+  document.getElementById('profile-role').innerText=role;
+  document.getElementById('profile-desc').innerText=desc;
+  document.getElementById('profile-img').src=img;
+  openModal('profile-modal');
+}
+
+function handlePartnerClick(name,owner,desc,img,discord,website){
+  if((!discord||discord==='none')&&website){
+    window.open(website,'_blank');
+    return;
+  }
+  if((!website||website==='none')&&discord){
+    window.open(discord,'_blank');
+    return;
+  }
+  currentPartner={name,discord,website};
+  document.getElementById('partner-name').innerText=name;
+  openModal('partner-link-modal');
+}
+
+document.getElementById('discord-btn').addEventListener('click',()=>{
+  closeModal('partner-link-modal');
+  if(currentPartner.discord&&currentPartner.discord!=='none')window.open(currentPartner.discord,'_blank');
+  else if(currentPartner.website)window.open(currentPartner.website,'_blank');
+});
+document.getElementById('website-btn').addEventListener('click',()=>{
+  closeModal('partner-link-modal');
+  if(currentPartner.website&&currentPartner.website!=='none')window.open(currentPartner.website,'_blank');
+  else if(currentPartner.discord)window.open(currentPartner.discord,'_blank');
+});
+
 try{
   const themeVars=window.parent.document.documentElement.style;
   for(let i=0;i<themeVars.length;i++){
@@ -125,6 +193,88 @@ try{
     document.documentElement.style.setProperty(p,themeVars.getPropertyValue(p));
   }
 }catch(e){}
+</script>
+<script>
+  const root = document.documentElement;
+  const themes = {
+    default: {
+      "--bg": "#0b0a16",
+      "--accent": "#7a5cff",
+      "--blue": "#00bfff",
+      "--text": "#e6e6ff",
+      "--surface": "rgba(255,255,255,0.05)",
+      "--border": "rgba(255,255,255,0.1)",
+      "--card-bg": "rgba(255,255,255,0.03)"
+    },
+    cyber: {
+      "--bg": "#050c1b",
+      "--accent": "#39ff14",
+      "--blue": "#00ffff",
+      "--text": "#e0ffe0",
+      "--surface": "rgba(0,255,0,0.05)",
+      "--border": "rgba(0,255,0,0.1)",
+      "--card-bg": "rgba(0,255,0,0.03)"
+    },
+    sunset: {
+      "--bg": "#1a0b0b",
+      "--accent": "#ff6f61",
+      "--blue": "#ffa500",
+      "--text": "#fff0e6",
+      "--surface": "rgba(255,110,100,0.05)",
+      "--border": "rgba(255,110,100,0.1)",
+      "--card-bg": "rgba(255,110,100,0.03)"
+    },
+    neon: {
+      "--bg": "#0f0020",
+      "--accent": "#ff00ff",
+      "--blue": "#00ffff",
+      "--text": "#ffffff",
+      "--surface": "rgba(255,0,255,0.05)",
+      "--border": "rgba(255,0,255,0.1)",
+      "--card-bg": "rgba(255,0,255,0.03)"
+    },
+    darkred: {
+      "--bg": "#1b0000",
+      "--accent": "#ff0000",
+      "--blue": "#cc0000",
+      "--text": "#ffe6e6",
+      "--surface": "rgba(255,0,0,0.05)",
+      "--border": "rgba(255,0,0,0.1)",
+      "--card-bg": "rgba(255,0,0,0.03)"
+    },
+    dnv2: {
+      "--bg": "#050007",
+      "--accent": "#ff00de",
+      "--blue": "#00fff7",
+      "--text": "#ffffff",
+      "--surface": "rgba(255, 0, 255, 0.05)",
+      "--border": "rgba(255, 0, 255, 0.15)",
+      "--card-bg": "rgba(15, 0, 30, 0.7)"
+    }
+  };
+
+
+  function applyTheme(theme) {
+    Object.entries(theme).forEach(([v, k]) => root.style.setProperty(v, k));
+    const frame = document.getElementById("content-frame");
+    try {
+      Object.entries(theme).forEach(([v, k]) => frame.contentWindow.document.documentElement.style.setProperty(v, k));
+    } catch (e) {}
+  }
+
+  function loadTheme() {
+    const name = localStorage.getItem("dominum-theme") || "default";
+    if (name === "custom") {
+      const t = JSON.parse(localStorage.getItem("dominum-custom-theme") || "{}");
+      applyTheme(t);
+    } else applyTheme(themes[name]);
+  }
+  if (name === "custom") {
+    const t = JSON.parse(localStorage.getItem("dominum-custom-theme") || "{}");
+    Object.entries(t).forEach(([v, k]) => root.style.setProperty(v, k));
+  } else Object.entries(themes[name]).forEach(([v, k]) => root.style.setProperty(v, k));
+  
+  loadTheme();
 </script>
 </body>
 </html>
