--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -58,9 +58,21 @@
   }
   .link-btn:hover{background:var(--blue);}
   @keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
+
+    #particles-js {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
 </style>
 </head>
 <body>
+
+<div id="particles-js"></div>
+  
 <h1>Extras</h1>
 <div class="extras-buttons">
   <button class="extras-btn" onclick="openModal('credits-modal')"><i class="fa-solid fa-star"></i> Credits</button>
@@ -146,6 +158,8 @@
     </div>
   </div>
 </div>
+  
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
 <script>
 let currentPartner={};
