--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -86,19 +86,19 @@
       <span class="close-btn" onclick="closeModal('credits-modal')">&times;</span>
     </div>
     <div class="card" onclick="openProfile('John Doe','Lead Developer','Handled core functionality, theme system, and page routing.','https://via.placeholder.com/60')">
-      <img src="https://via.placeholder.com/60" alt="User">
+      <img src="/assets/images/users/bog.png" alt="Bog">
       <div class="card-content">
-        <h3>John Doe</h3>
-        <p class="role">Lead Developer</p>
-        <p class="desc">Handled core functionality, theme system, and page routing.</p>
+        <h3>Bog</h3>
+        <p class="role">Games And Game Ports</p>
+        <p class="desc">Cool Guy😎</p>
       </div>
     </div>
     <div class="card" onclick="openProfile('Jane Smith','UI/UX Designer','Designed the visual style and helped with animations and layout structure.','https://via.placeholder.com/60')">
-      <img src="https://via.placeholder.com/60" alt="User">
+      <img src="/assets/images/users/zxs.png" alt="ZXS">
       <div class="card-content">
-        <h3>Jane Smith</h3>
-        <p class="role">UI/UX Designer</p>
-        <p class="desc">Designed the visual style and helped with animations and layout structure.</p>
+        <h3>ZXS</h3>
+        <p class="role">Dev Management</p>
+        <p class="desc">Placeholder description for now :/</p>
       </div>
     </div>
   </div>
