--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -127,7 +127,7 @@
 
   <div class="content">
     <div class="logo">
-      <img src="https://dominum-test.vercel.app/assets/images/dominum-transparent.png" alt="Logo">
+      <img src="/assets/images/dominum-transparent.png" alt="Logo">
     </div>
 
     <h1>DOMINUM</h1>
