Refactor zone-item styles for better theming

--- a/assets/pages/games.html
+++ b/assets/pages/games.html
@@ -53,7 +53,7 @@
   }
 
   .zone-item {
-    background: #251841;
+    background: var(--card-bg);
     border: 1px solid var(--border);
     border-radius: var(--radius);
     cursor: pointer;
@@ -64,7 +64,7 @@
   }
   .zone-item:hover {
     transform: translateY(-4px);
-    box-shadow: var(--shadow);
+    background: var(--accent);
   }
   .zone-item img {
     width: 100%;
@@ -102,7 +102,6 @@
   font-family: 'Inter', sans-serif;
 }
 
-/* Style for buttons with icons */
 .header-btn {
   background: none;
   border: none;
