--- a/assets/pages/games.html
+++ b/assets/pages/games.html
@@ -64,7 +64,7 @@
   }
   .zone-item:hover {
     transform: translateY(-4px);
-    background: var(--accent);
+    background: var(--shadow);
   }
   .zone-item img {
     width: 100%;
