--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -70,6 +70,22 @@
     z-index:-1;
     pointer-events:none;
   }
+  #vortex-links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  #vortex-links .card {
+    text-align: center;
+    cursor: pointer;
+    transition: background 0.3s, box-shadow 0.3s;
+  }
+  
+  #vortex-links .card:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 0 10px var(--accent);
+  }
 </style>
 </head>
 <body>
@@ -360,25 +376,26 @@
       <span class="close-btn" onclick="closeModal('vortex-modal')">&times;</span>
     </div>
     <p style="text-align:center;margin-bottom:15px;">Select a link to open:</p>
-    <div class="link-btns" id="vortex-links">
-      <button class="link-btn" onclick="openEmbed('https://vortexos.net/embed/dominum')">Link 1</button>
-      <button class="link-btn" onclick="openEmbed('https://vtx.chat/embed/dominum')">Link 2</button>
-      <button class="link-btn" onclick="openEmbed('https://vortexos.global.ssl.fastly.net/embed/dominum')">Link 3</button>
-      <button class="link-btn" onclick="openEmbed('https://vtx.bloxcraft-ubg.workers.dev/embed/dominum')">Link 4</button>
-      <button class="link-btn" onclick="openEmbed('https://vortexisgoated.xn--72cg7bdd3bro6b3ab9c8btw4x.com/embed/dominum')">5</button>
-      <button class="link-btn" onclick="openEmbed('https://apush.lotossutra.at/embed/dominum')">Link 5</button>
-      <button class="link-btn" onclick="openEmbed('https://dpsisa.chickenkiller.com/embed/dominum')">Link 6</button>
-      <button class="link-btn" onclick="openEmbed('https://mail.linkylike.com/embed/dominum')">Link 7</button>
-      <button class="link-btn" onclick="openEmbed('https://autoconfig.cus-mail-ph27-eby74.doyoumail.co/embed/dominum')">Link 8</button>
-      <button class="link-btn" onclick="openEmbed('https://vortexos.net.cdn.cloudflare.net/embed/dominum')">Link 9</button>
-      <button class="link-btn" onclick="openEmbed('https://vortex-chat.ctx.cl/embed/dominum')">Link 10</button>
-      <button class="link-btn" onclick="openEmbed('https://dashboard.clienturl.net/embed/dominum')">Link 11</button>
-      <button class="link-btn" onclick="openEmbed('https://dashboard.fluxus.org/embed/dominum')">Link 12</button>
-      <button class="link-btn" onclick="openEmbed('https://blight.404.mn/embed/dominum')">Link 13</button>
-      <button class="link-btn" onclick="openEmbed('https://auth.mcwrite.net/embed/dominum')">Link 14</button>
+    <div id="vortex-links">
+      <div class="card" onclick="openEmbed('https://vortexos.net/embed/dominum')"><h3>Link 1</h3></div>
+      <div class="card" onclick="openEmbed('https://vtx.chat/embed/dominum')"><h3>Link 2</h3></div>
+      <div class="card" onclick="openEmbed('https://vortexos.global.ssl.fastly.net/embed/dominum')"><h3>Link 3</h3></div>
+      <div class="card" onclick="openEmbed('https://vtx.bloxcraft-ubg.workers.dev/embed/dominum')"><h3>Link 4</h3></div>
+      <div class="card" onclick="openEmbed('https://vortexisgoated.xn--72cg7bdd3bro6b3ab9c8btw4x.com/embed/dominum')"><h3>Link 5</h3></div>
+      <div class="card" onclick="openEmbed('https://apush.lotossutra.at/embed/dominum')"><h3>Link 6</h3></div>
+      <div class="card" onclick="openEmbed('https://dpsisa.chickenkiller.com/embed/dominum')"><h3>Link 7</h3></div>
+      <div class="card" onclick="openEmbed('https://mail.linkylike.com/embed/dominum')"><h3>Link 8</h3></div>
+      <div class="card" onclick="openEmbed('https://autoconfig.cus-mail-ph27-eby74.doyoumail.co/embed/dominum')"><h3>Link 9</h3></div>
+      <div class="card" onclick="openEmbed('https://vortexos.net.cdn.cloudflare.net/embed/dominum')"><h3>Link 10</h3></div>
+      <div class="card" onclick="openEmbed('https://vortex-chat.ctx.cl/embed/dominum')"><h3>Link 11</h3></div>
+      <div class="card" onclick="openEmbed('https://dashboard.clienturl.net/embed/dominum')"><h3>Link 12</h3></div>
+      <div class="card" onclick="openEmbed('https://dashboard.fluxus.org/embed/dominum')"><h3>Link 13</h3></div>
+      <div class="card" onclick="openEmbed('https://blight.404.mn/embed/dominum')"><h3>Link 14</h3></div>
+      <div class="card" onclick="openEmbed('https://auth.mcwrite.net/embed/dominum')"><h3>Link 15</h3></div>
     </div>
   </div>
 </div>
+
 <div id="embed-container" style="
   display:none;
   position:fixed;
