--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -95,6 +95,7 @@
   <button class="extras-btn" onclick="openModal('credits-modal')"><i class="fa-solid fa-star"></i> Credits</button>
   <button class="extras-btn" onclick="openModal('partners-modal')"><i class="fa-solid fa-handshake"></i> Partners</button>
   <button class="extras-btn" onclick="openModal('vortex-modal')"><i class="fa-solid fa-comments"></i> Vortex Chat</button>
+  <button class="extras-btn" onclick="loadPage('eagl3r-launcher')"><i class="fa-solid fa-comments"></i> Vortex Chat</button>
 </div>
 <div class="modal" id="credits-modal">
   <div class="modal-content">
